--- a/source/style.scss
+++ b/source/style.scss
@@ -1,2 +1,19 @@
-@import 'zerostyle.scss'
+.wrapper{
+    background: radial-gradient(blue, pink);
+   margin: 0;
+   position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 
+.container{
+    color: rgb(15, 218, 174);
+    font-size: 35px;
+    position: absolute;
+    top:50%;
+left:50%;
+transform:translate(-50%, -50%);
+
+}
